# gdr

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md
.github/workflows/: cmake-all-platforms-build.yml  cmake-single-platform.yml
cmake/: py_venv.cmake  shaders.cmake
cmake/codegen/: codegen.cfg.xml  codegen.cmake  codegen.py  common.hpp
cmake/codegen/templates/: codegen.hpp.j2
data/backpack/: backpack.mtl
shaders/: .gitignore  CMakeLists.txt  base.frag  base.vert  bf.frag  bf.vert  common.glsl  cull_mesh.comp  cull_meshlets.comp  cull_occlusion_pass.comp  cull_pass.comp  depth_reduce.comp  frustum.frag  frustum.vert  imgui_blit.frag  imgui_blit.vert  mesh.vert  mesh_cull.comp  meshlets.debug.frag  meshlets.frag  meshlets.mesh  meshlets.task  meshlets_cull.comp  meshlets_tmp.frag  shaders.cfg  types.glsl  types.h
shaders/include/shaders/: constants.h
src/: aligned_alloc.cpp  aligned_alloc.hpp  assert2.cpp  assert2.hpp  bytes.hpp  camera_controller.hpp  debug.cpp  debug.hpp  detail.hpp  events.cpp  events.hpp  events_queue.cpp  events_queue.hpp  fs.hpp  main.cpp  memory_debug.cpp  render_settings.hpp  result.hpp  types.hpp  window.cpp  window.hpp
src/cpp/: alg_constexpr.hpp  math.hpp
src/cpp/containers/: stack_string.hpp
src/cpp/hash/: crc_hash.hpp  hashed_string.hpp
src/cpp/string/: stack_string.hpp
src/fs/: fs.hpp  path.hpp  path_utils.hpp  types.hpp
src/imgui/: gpu_profile_data.hpp  imex.hpp  imgui_layer.cpp  imgui_layer.hpp
src/imgui/windows/: components_editor.hpp
src/render/: sm_cache.cpp  sm_cache.hpp  sm_serializer.cpp  sm_serializer.hpp  static_model.cpp  static_model.hpp
src/render/debug/: frustum_renderer.hpp
src/render/platform/nri/: nri_interface.hpp  nri_renderer.cpp  nri_renderer.hpp
src/render/platform/vk/: vk_barrier.cpp  vk_barrier.hpp  vk_buffer.cpp  vk_buffer.hpp  vk_buffer_transfer.cpp  vk_buffer_transfer.hpp  vk_command_buffer.cpp  vk_command_buffer.hpp  vk_device.cpp  vk_device.hpp  vk_error.hpp  vk_geometry_pool.hpp  vk_image.cpp  vk_image.hpp  vk_pipeline.cpp  vk_pipeline.hpp  vk_query.cpp  vk_query.hpp  vk_renderer.cpp  vk_renderer.hpp  vk_timestamp.cpp  vk_timestamp.hpp  vk_vertex_desc.hpp  vma.hpp
src/scene/: components.cpp  components.hpp  entity.hpp  scene.cpp  scene.hpp
src/soft_assert/: soft_assert.cpp  soft_assert.hpp
vendors/: CMakeLists.txt
